# Remove_Points

./: CMakeLists.txt  README.md
src/: remove_dynamic_points.cpp
